# gitlab-ci-status

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
graphql/: gitlab_schema.graphql  pipeline-jobs.graphql  project-pipelines.graphql
src/: config.rs  events.rs  job_trace.rs  jobs.rs  main.rs  pipelines.rs
src/graphql/: mod.rs
