[package]
name = "gitlab-status"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
comfy-table = "2"
tokio = {version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
tui = "0.16.0"
termion = "1.5.6"
tracing = "0.1"
tracing-subscriber = "0.2"
