[package]
name = "gitlab-status"
version = "0.1.0"
authors = ["Fredrik Jansson <fj@avassa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
dotenv = "0.15"
graphql_client = { version = "0.10.0", features = ["reqwest"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version="1", features = ["derive"] }
serde_yaml = "0.8.21"
termion = "1.5.6"
tokio = {version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tui = "0.16.0"

[[bin]]
name = "gitlab-status"
path = "src/main.rs"
